fixed some blog grammar

--- a/pages/blog/index.mdx
+++ b/pages/blog/index.mdx
@@ -60,7 +60,7 @@ made Hyper 2 faster, for Hyper 3 we knew it was possible to deliver
 even faster performance by completely rewriting the renderer with [WebGL](https://developer.mozilla.org/en-US/docs/Web/API/WebGL_API). By fortunate coincidence, as we were still figuring things out, [Daniel Imms](https://github.com/tyriar) (from
 `xterm.js` and `VSCode` fame),
 [just returned from a "vacation"](https://twitter.com/Tyriar/status/1064932797016489984)
-where he happened to be write a shiny new WebGL renderer.
+where he happened to write a shiny new WebGL renderer.
 
 Isn't the open source community just amazing? We immediately merged
 Daniel's branch onto a test fork, and well, it ran circles around
